<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintPolicy"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/text_actionsearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12.5dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/setting"
            android:textSize="18sp" />

        <View
            android:id="@+id/view_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_actionsearch"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="14dp"
            android:background="#9C9C9C" />

        <TextView
            android:textColor="@color/color_trendding"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@+id/view_action"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/enter_your_key_api" />
        <EditText
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textIntent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edt_apiKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:hint="@string/create_api_key" />

        <Button
            android:text="@string/confirm"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_apiKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
