<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.setting.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLanguage">

        <vn.tapbi.youtubeplayer3.ui.main.custom.CustomTextView
            android:id="@+id/text_actionsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12.5dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/setting"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_action"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="14dp"
            android:background="#9C9C9C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_actionsearch" />

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_action">

            <RadioButton
                android:textSize="18sp"
                android:id="@+id/rad_languageVietNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_ng_vi_t" />

            <RadioButton
                android:textSize="18sp"
                android:id="@+id/rad_languageEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ti_ng_anh" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>