<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.setting.NotificationFragment"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:id="@+id/cons">

        <vn.tapbi.youtubeplayer3.ui.main.custom.CustomTextView
            android:id="@+id/text_actionsearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12.5dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/setting"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_action"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="14dp"
            android:background="#9C9C9C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_actionsearch" />

        <TextView
            android:textSize="18sp"
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/b_o_th_c_v_o_7h_s_ng"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_action" />

        <Switch
            android:textSize="18sp"
            android:id="@+id/switchNotification"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:drawablePadding="10dp"
            android:text="@string/off"
            app:layout_constraintStart_toEndOf="@id/txt"
            app:layout_constraintTop_toBottomOf="@+id/view_action" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
