<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.search.SearchFragment">

            <TextView
                android:layout_marginTop="32dp"
                android:visibility="gone"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_connection_is_not_available"
                android:id="@+id/txt_connectAvailable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_recent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <vn.tapbi.youtubeplayer3.ui.main.custom.CustomTextView
                android:id="@+id/text_actionsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12.5dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/search"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_action"
                android:background="#9C9C9C"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/text_actionsearch"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.SearchView
                android:textSize="14sp"
                android:id="@+id/searchVideo"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_searchvideo"
                android:iconifiedByDefault="true"
                android:imeOptions="actionSearch"
                android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_action"
                app:queryBackground="@null"
                app:queryHint="@string/search_youtube"
                app:searchIcon="@drawable/icon_search_search"
                app:submitBackground="@null"
                app:voiceIcon="@drawable/icon_mic"
                android:focusableInTouchMode="true" />

            <TextView
                android:id="@+id/txt_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/recent"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchVideo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRecentSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_recent" />

            <androidx.recyclerview.widget.RecyclerView
                android:overScrollMode="never"
                android:id="@+id/recyclerViewRecentSearchHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_recent" />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recyclerViewSearch"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchVideo"
                android:paddingBottom="56dp"/>

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/recyclerViewRecentSearchHistory"
                app:layout_constraintTop_toBottomOf="@+id/searchVideo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
